# wildwatch

./: .dockerignore  .dvcignore  .gitignore  Dockerfile  README.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml  wildwatch_mlops_prompt.md
.claude/: settings.local.json
.github/workflows/: ci.yml  retrain.yml
scripts/: compare_and_promote.py  register_model.py
src/: __init__.py
src/monitoring/: __init__.py
src/serving/: __init__.py  app.py  inference.py  schemas.py
src/training/: __init__.py  config.py  evaluate.py  model.py  train.py
tests/: test_sanity_inference.py  test_serving.py  test_training.py
