[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wildwatch-mlops"
version = "0.1.0"
description = "End-to-end MLOps platform for wildlife camera trap image classification."
readme = "README.md"
requires-python = "==3.11.*"
license = { text = "MIT" }
authors = [{ name = "Traelyn Brasseaux" }]

dependencies = [
    # Core ML
    "torch>=2.2,<2.5",
    "torchvision>=0.17,<0.20",
    "timm>=1.0.0",
    "pillow>=10.0",
    "numpy>=1.26,<2.0",
    "pandas>=2.1",
    "pyyaml>=6.0",
    "pydantic>=2.5",

    # MLOps
    "dvc>=3.50",
    "mlflow>=2.13",

    # Serving
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",

    # Monitoring
    "streamlit>=1.33",
    "scipy>=1.12",
    "plotly>=5.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]  # handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "N"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
